# memizer

./: README.md  __init__.py  __main__.py  pyproject.toml
src/: index.html
src/memizer/: __init__.py
