[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memizer"
version = "1.0.0"
description = "Displays a meme"
readme = "README.md"
authors = [{ name = "Miloš Roknić", email = "roknic.milos.994@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["meme", "memizer"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/roknicmilos/memizer"

[project.scripts]
memize = "memizer.__init__:display_meme"
